--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -18,4 +18,21 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  margin-right: 2px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background: #2B2D31;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1A1B1E;
+  border-radius: 4px;
 }
